sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:11: error: not found: value i
    i=0
    ^AlgCombSort:12: error: not found: value i
    while (i+ecart < getNombreValeurs()) {
           ^AlgCombSort:13: error: not found: value i
      if (plusPetit(i+ecart, i)) {
                    ^AlgCombSort:13: error: not found: value i
      if (plusPetit(i+ecart, i)) {
                             ^AlgCombSort:14: error: not found: value i
      echange(i,i+ecart)
              ^AlgCombSort:14: error: not found: value i
      echange(i,i+ecart)
                ^AlgCombSort:18: error: value or is not a member of Boolean
  } while (ecart>1 or lastEchange = true)
                   ^