sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart: Int = 0
  var lastEchange: Boolean = false
  ecart = getNombreValeurs()
  do {
    lastEchange = false
    if (ecart>1) {
      ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    }
    i=0
    while (i+ecart < getNombreValeurs()) {
      if (plusPetit(i+ecart, i)) {
      echange(i,i+ecart)
        lastEchange=true
      }
    }
  } while (ecart>1 or lastEchange = true)
}